...
class SearchFactsViewModel: BindingViewModelType {
    
    var disposedBag = DisposeBag()
    var input: SearchFactsViewModel.UIInput
    var output: SearchFactsViewModel.UIOutput
    
    private let suggestionList = ["GAMES", "SPORT", "DEV", "SCIENCE", "TECHNOLOGY", "MUSIC", "TRAVEL", "CARRER"]
    
    struct UIInput {
        var searchText: PublishRelay<String>
    }
    
    struct UIOutput {
...
