...

//MARK: - Setups View -
extension FactsViewController {
    
    private func configureNavigationBar() {
        let barItem = UIBarButtonItem(barButtonSystemItem: .search, target: nil, action: nil)
        barItem.accessibilityIdentifier = "searchBarItem"
        self.navigationItem.rightBarButtonItem = barItem
    }
    
    private func setupCell(in collectionView: UICollectionView,
                           index: Int,
                           cellType: FactsTableViewCellType) -> UICollectionViewCell {
...
